# vacuum-im

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  Downloads.md  FAQ.md  INSTALL  Packages.md  ProjectHome.md  README  Supported_XEPs.md  TRANSLATORS  appveyor.yml  config.cmake  install.cmake  package.cmake  plugins.cmake  translations.cmake
src/: CMakeLists.txt  config.cmake  config.inc  install.cmake  install.inc  sdkconfig.inc  src.pro  translations.inc  tsupdate.bat  tsupdate.sh
src/client/: client.pro  pluginmanager.cpp  pluginmanager.h
src/definations/: accountvaluenames.h  actiongroups.h  archivehandlerorders.h  archiveindextyperole.h  dataformtypes.h  discofeatureorder.h  menubargroups.h  menuicons.h  messagedataroles.h  messagewriterorders.h  multiuserdataroles.h  namespaces.h  optionnodeorders.h  optionnodes.h  optionvalues.h  optionwidgetorders.h  resourceloaderorders.h  rosterdataholderorders.h  rosterdragdropmimetypes.h  rosterfootertextorders.h  rosterindextyperole.h  rosterlabelorders.h  rostertooltiporders.h  serviceicons.h  soundfiles.h  soundnames.h  stanzahandlerorders.h  statusbargroups.h  statusicons.h  toolbargroups.h  urlhandlerorders.h  version.h  widgeturlhandlerorders.h  xmppstanzahandlerorders.h
src/definitions/: actiongroups.h  archivecapabilityorders.h  commandline.h  dataformtypes.h  definitions.pro  editcontentshandlerorders.h  fshandlerorders.h  internalerrors.h  mainwindowwidgets.h  menuicons.h  messagedataroles.h  messagehandlerorders.h  messageviewurlhandlerorders.h  messagewindowwidgets.h  messagewriterorders.h  multiuserdataholderorders.h  multiuserdataroles.h  multiuseritemkinds.h  multiuseritemlabels.h  multiusernotifyorders.h  multiusersorthandlerorders.h  multiusertooltiporders.h  namespaces.h  notificationdataroles.h  notificationtypes.h  optionnodeorders.h  optionnodes.h  optionvalues.h  optionwidgetorders.h  publicdatastreamhandlerorders.h  publicdatastreamparameters.h  recentitemtypes.h  resources.h  rosterdataholderorders.h  rosterdragdropmimetypes.h  rosterfootertextorders.h  rosterindexroles.h  rosterindextyperole.h  rosterlabelholderorders.h  rosterlabelorders.h  (+13 more)
src/interfaces/: iaccountmanager.h  iannotations.h  iautostatus.h  iavatars.h  ibirthdayreminder.h  ibitsofbinary.h  ibookmarks.h  icaptchaforms.h  ichatstates.h  iclientinfo.h  icommands.h  iconnectionmanager.h  idataforms.h  idatastreamsmanager.h  idatastreamspublisher.h  idefaultconnection.h  iemoticons.h  ifilemessagearchive.h  ifilestreamsmanager.h  ifiletransfer.h  igateways.h  iinbandstreams.h  ijabbersearch.h  imainwindow.h  imessagearchiver.h  imessagecarbons.h  imessageprocessor.h  imessagestylemanager.h  imessagestyles.h  imessagewidgets.h  imetacontacts.h  imultiuserchat.h  inotifications.h  interfaces.pro  ioptionsmanager.h  ipep.h  ipepmanager.h  ipluginmanager.h  ipresence.h  ipresencemanager.h  (+29 more)
src/loader/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  aboutbox.ui  loader.cmake  loader.pri  loader.pro  loader.rc  main.cpp  pluginmanager.cpp  pluginmanager.h  setuppluginsdialog.cpp  setuppluginsdialog.h  setuppluginsdialog.ui
src/make/: CMakeLists.txt  config.cmake  config.inc  make.pro  translations.cmake  translations.inc
src/plugins/: CMakeLists.txt  make_vcproj.bat  newplugin.bat  plugin_list.cmake  plugins.cmake  plugins.inc  plugins.pro
src/plugins/accountmanager/: CMakeLists.txt  account.cpp  account.h  accountitemwidget.cpp  accountitemwidget.ui  accountmanage.ui  accountmanager.cpp  accountmanager.h  accountoptions.cpp  accountoptions.h  accountoptions.ui  accountsoptions.cpp  accountsoptions.h  accountsoptions.ui  accountsoptionswidget.cpp  accountsoptionswidget.ui  createaccountwizard.cpp  createaccountwizard.h
src/plugins/adiummessagestyle/: CMakeLists.txt  adiummessagestyle.cmake  adiummessagestyle.cpp  adiummessagestyle.h  adiummessagestyle.pri  adiummessagestyle.pro  adiummessagestyleengine.cpp  adiummessagestyleengine.h  adiummessagestyleplugin.cpp  adiummessagestyleplugin.h  adiumoptionswidget.cpp  adiumoptionswidget.h  adiumoptionswidget.ui  styleviewer.cpp  styleviewer.h  webhittestresult.cpp  webhittestresult.h  webpage.cpp  webpage.h
src/plugins/annotations/: annotations.cpp  annotations.h  editnotedialog.cpp  editnotedialog.ui
src/plugins/autostatus/: CMakeLists.txt  autorulesoptionsdialog.cpp  autorulesoptionsdialog.h  autostatus.cmake  autostatus.cpp  autostatus.h  autostatus.pri  autostatusoptionswidget.cpp  autostatusoptionswidget.h  statusoptionswidget.cpp  statusoptionswidget.h  statusoptionswidget.ui
src/plugins/avatars/: avatars.cpp  avatars.h  avatars.pri  rosteroptionswidget.cpp  rosteroptionswidget.h  rosteroptionswidget.ui
src/plugins/birthdayreminder/: birthdayreminder.cpp  birthdayreminder.h
src/plugins/bitsofbinary/: CMakeLists.txt  bitsofbinary.cpp  bitsofbinary.h  bitsofbinary.pro
src/plugins/bookmarks/: CMakeLists.txt  bookmarks.cpp  bookmarks.h  (+6 more)
src/tools/: tools.pro
src/translations/: tspush.bat  tsrelease.bat  tsrelease.sh  tsrelease_de_DE.bat  tsrelease_pl_PL.bat  tsupdate.bat  tsupdate.sh
src/utils/: CMakeLists.txt  QtEscape.h  action.cpp  action.h  advanceditemdelegate.cpp  advanceditemdelegate.h  advanceditemmodel.cpp  animatedtextbrowser.cpp  animatedtextbrowser.h  boxwidget.cpp  closebutton.cpp  closebutton.h  datetime.cpp  datetime.h  errorhandler.cpp  errorhandler.h  filestorage.cpp  filestorage.h  helpers.h  iconset.cpp  iconsetdelegate.cpp  iconsetdelegate.h  iconstorage.cpp  iconstorage.h  imagemanager.cpp  imagemanager.h  jid.cpp  jid.h  logger.cpp  logger.h  menu.cpp  menu.h  menubarchanger.cpp  menubarchanger.h  message.cpp  message.h  options.cpp  options.h  passworddialog.cpp  pluginhelper.cpp  (+33 more)
trunk/: .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  README  TRANSLATORS  config.cmake  install.cmake  plugins.cmake  translations.cmake
trunk/src/: CMakeLists.txt  config.cmake  config.inc  install.inc  package.cmake  sdkconfig.cmake  src.pro  translations.cmake  translations.inc  tsrelease.bat  tsupdate.bat  tsupdate.sh
trunk/translations/: dummy
(+8163 files in other folders)
