add_subdirectory(thirdparty)
add_subdirectory(utils)
add_subdirectory(loader)
add_subdirectory(plugins)
add_subdirectory(definitions)
add_subdirectory(interfaces)
add_subdirectory(make)
if (APPLE)
	add_subdirectory(packages/macosx)
endif (APPLE)
if (WIN32)
	add_subdirectory(packages/windows)
endif (WIN32)
